# logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logger.sln
logger/: CMakeLists.txt  logger.cpp  logger.h  logger.vcxproj  logger.vcxproj.filters  windows_console_writer.cpp  windows_console_writer.h  writer.h
logger_app/: CMakeLists.txt  logger_app.vcxproj
logger_app/source/: main.cpp
